20010919
 - (bal) OpenbSD Sycn
   - markus@cvs.openbsd.org 2001/09/19 10:08:51
     [sshd.8]
     command=xxx applies to subsystem now, too
   - markus@cvs.openbsd.org 2001/09/19 13:23:29
     [key.c]
     key_read() now returns -1 on type mismatch, too

20010918
 - (djm) Configure support for smartcards. Based on Ben's work.
 - (djm) Revert setgroups call, it causes problems on OS-X
 - (djm) Avoid warning on BSDgetopt
 - (djm) More makefile infrastructre for smartcard support, also based
   on Ben's work
 - (djm) Specify --datadir in RPM spec files so smartcard applet gets
    put somewhere sane. Add Ssh.bin to manifest.
 - (djm) Make smartcard support conditional in Redhat RPM spec
 - (bal) LICENCE update.  Has not been done in a while.
 - (stevesk) nchan.c: we use X/Open Sockets on HP-UX now so shutdown(2)
   returns ENOTCONN vs. EINVAL for socket not connected; remove EINVAL
   check. ok Lutz Jaenicke
 - OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/09/17 17:57:57
     [scp.1 scp.c sftp.1 sftp.c]
     add -Fssh_config option; ok markus@
   - stevesk@cvs.openbsd.org 2001/09/17 19:27:15
     [kexdh.c kexgex.c key.c key.h ssh-dss.c ssh-keygen.c ssh-rsa.c]
     u_char*/char* cleanup; ok markus
   - markus@cvs.openbsd.org 2001/09/17 20:22:14
     [scard.c]
     never keep a connection to the smartcard open.
     allows ssh-keygen -D U while the agent is running; report from 
     jakob@
   - stevesk@cvs.openbsd.org 2001/09/17 20:38:09
     [sftp.1 sftp.c]
     cleanup and document -1, -s and -S; ok markus@
   - markus@cvs.openbsd.org 2001/09/17 20:50:22
     [key.c ssh-keygen.c]
     better error handling if you try to export a bad key to ssh.com
   - markus@cvs.openbsd.org 2001/09/17 20:52:47
     [channels.c channels.h clientloop.c]
     try to fix agent-forwarding-backconnection-bug, as seen on HPUX, 
     for example; with Lutz.Jaenicke@aet.TU-Cottbus.DE,
   - markus@cvs.openbsd.org 2001/09/17 21:04:02
     [channels.c serverloop.c]